--- a/08-A-mapping.html
+++ b/08-A-mapping.html
@@ -445,6 +445,85 @@ div.tocify {
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
+<div id="types-of-spatial-data" class="section level4">
+<h4>Types of spatial data</h4>
+<p>There are two main ways to represent spatial data:</p>
+<ul>
+<li><strong>raster</strong>: a grid of values with a grain size and spatial extent</li>
+<li><strong>vector</strong>: a set of points, lines and polygons defined by their coordinates</li>
+</ul>
+<p>The way spatial data are displayed depends on their projection or coordinate reference system (CRS). Some projections preserve distances between points whereas others presernce area or angles. <em>Know what the projection you are using does to distances before measuring distances between points using their coordinates.</em></p>
+</div>
+<div id="how-r-handles-spatial-data" class="section level4">
+<h4>How R handles spatial data</h4>
+<p>The package <code>sp</code> has many of the base methods for handling spatial data in R. The package <code>rgdal</code> is needed to support different projections.</p>
+<p>Objects in R that contain spatial information have a special class “Spatial”. This means that they have information on the projection (stored as <code>proj4string</code>) and the broadest extent of the data (stored as a bounding rectangle/box <code>bbox</code>).</p>
+<p>There are special classes for each type of spatial data:</p>
+<ul>
+<li><code>SpatialPoints</code> and <code>SpatialPointsDataFrame</code></li>
+<li><code>SpatialLines</code> and <code>SpatialLinesDataFrame</code></li>
+<li><code>SpatialPolygons</code> and <code>SpatialPolygonsDataFrame</code> (definitely read Chp 2 if you need to work with polygon data)</li>
+<li><code>SpatialGrid</code> and <code>SpatialGridDataFrame</code> or <code>SpatialPixels</code> and <code>SpatialPixelsDataFrame</code> (use the <code>raster</code> package if you are mostly working with gridded data- it stores information much more efficiently and is easier to use).</li>
+</ul>
+<p>Use the <code>CRS()</code> function to add a projection to data to turn it into spatial data. <code>CRS</code> accepts text formatted according to the proj.4 framework, which looks like:</p>
+<p><code>CRS(&quot;+proj=longlat +ellps=WGS84&quot;)</code></p>
+<p>This tells R that the coordinates in the associated data are in longitude and latitude and that the model of the shape of the earth that should be used (WGS84). <a href="http://rspatial.org/spatial/rst/6-crs.html">This tutorial</a> gives an explanation of coordinate reference systems in R and its parent website is a great resources for spatial analysis in R.</p>
+<p>Other links:</p>
+<ul>
+<li><a href="http://proj4.org/projections/index.html">Here</a> is a list of how to specify the different projections in the proj.4 framework.</li>
+<li><a href="http://proj4.org/parameters.html#parameter-list">Here</a> is a list of how to specify other parameters, like the center of the projection and the units.</li>
+</ul>
+</div>
+<div id="visualizing-spatial-data-in-r" class="section level4">
+<h4>Visualizing spatial data in R</h4>
+<p><strong>Base graphics</strong></p>
+<p>Use: <code>plot()</code> and <code>image()</code></p>
+<p>Pros:</p>
+<ul>
+<li>build layer by layer with separate function calls</li>
+<li>same basic functions used to plot regular data</li>
+</ul>
+<p>Cons:</p>
+<ul>
+<li>duplicated code when plotting the same map for multiple variables</li>
+<li>manually map variables to visual attributes (must create your own scales)</li>
+<li>manually make legends</li>
+</ul>
+<p><strong>Grid graphics (e.g. <code>lattice</code>)</strong></p>
+<p><code>spplot()</code> is based on <code>xyplot()</code> for point data and <code>levelplot()</code> for grid data.</p>
+<p>Pros:</p>
+<ul>
+<li>conditional plots (same code makes multiple maps with different variables)</li>
+<li>automatic scaling of variables mapped to visual attributes</li>
+<li>automatic legends</li>
+</ul>
+<p>Cons:</p>
+<ul>
+<li>dense and cryptic documentation makes it hard to learn how to customize</li>
+</ul>
+<p><strong>ggplot2</strong></p>
+<p>Use: <code>ggplot()</code></p>
+<p>Pros:</p>
+<ul>
+<li>no special handling of spatial data once spatial data is converted to a dataframe</li>
+<li>conditional plots (same code makes multiple maps with different variables)</li>
+<li>automatic scaling of variables mapped to visual attributes</li>
+<li>automatic legends</li>
+</ul>
+<p>Cons:</p>
+<ul>
+<li><code>ggplot</code> doesn’t work automatically on SpatialPointsDataFrames or gridded data.</li>
+<li><code>geom_grid</code> and <code>geom_tile</code> are for gridded data but may be inefficient for very large grids because data must be supplied in long form rather than a matrix of values.</li>
+</ul>
+</div>
+<div id="colors" class="section level4">
+<h4>Colors</h4>
+<p>Useful functions:</p>
+<ul>
+<li><code>colorRampPalette()</code> makes a color ramp between the indicated colors with a given number of colors</li>
+<li><code>classIntervals()</code> creates set of intervals between two numbers with breaks between intervals defined in different ways.</li>
+</ul>
+</div>
 </div>
 <div id="analysis-example" class="section level3">
 <h3>Analysis Example</h3>
