--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@ div.tocify {
 <td>9</td>
 <td>Mon</td>
 <td>Nov. 27</td>
-<td>Topic 16. Selected by class: time-series analysis</td>
+<td>Topic 16. Selected by class: <a href="09-A-time-series.html">time-series analysis</a></td>
 <td>Lizzie</td>
 <td></td>
 </tr>
@@ -685,7 +685,7 @@ div.tocify {
 <td></td>
 <td>Wed</td>
 <td>Nov. 29</td>
-<td>Topic 17. Selected by class: network analysis</td>
+<td>Topic 17. Selected by class: <a href="09-B-networks.html">network analysis</a></td>
 <td>Beth</td>
 <td>Nicole</td>
 </tr>
@@ -693,7 +693,7 @@ div.tocify {
 <td></td>
 <td>Fri</td>
 <td>Dec. 1</td>
-<td>Topic 18. Selected by class: occupancy models</td>
+<td>Topic 18. Selected by class: <a href="09-C-occupancy-models.html">occupancy models</a></td>
 <td>Nick</td>
 <td></td>
 </tr>
