Fixed title on 09-B

--- a/09-B-networks.html
+++ b/09-B-networks.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Beth &amp; Nicole" />
 
 
-<title>Time series analysis</title>
+<title>Network analysis</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -338,7 +338,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Time series analysis</h1>
+<h1 class="title toc-ignore">Network analysis</h1>
 <h4 class="author"><em>Beth &amp; Nicole</em></h4>
 
 </div>
