fixed links to texts and rendered

--- a/09-C-occupancy-models.html
+++ b/09-C-occupancy-models.html
@@ -346,7 +346,10 @@ $(document).ready(function () {
 
 <p><strong>Assigned Reading:</strong></p>
 <blockquote>
-<p>Kery 2010. Chapter 20: Nonstandard GLMMs 1: Site-Occupancy Species Distribution Model in <em>Introduction to WinBUGS for Ecologists</em></p>
+<p>Kery 2010. Chapter 20: Nonstandard GLMMs 1: Site-Occupancy Species Distribution Model in <em>Introduction to WinBUGS for Ecologists</em> <a href="https://www-sciencedirect-com.stanford.idm.oclc.org/science/book/9780123786050">Stanford full text</a> or try <a href="https://searchworks.stanford.edu/view/8660368">here</a></p>
+</blockquote>
+<blockquote>
+<p>Section 14.3 in Korner-Nievergelt et al. 2015. Bayesian data analysis in ecology using linear models with R, BUGS, and Stan. Elsevier. <a href="http://www.sciencedirect.com/science/book/9780128013700">Stanford full text</a></p>
 </blockquote>
 <div id="key-points" class="section level3">
 <h3>Key Points</h3>
