--- a/02-B-git-intro.html
+++ b/02-B-git-intro.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Jes Coyle" />
 
 
-<title>Introduction to git and GitHub</title>
+<title>Introduction to Git and GitHub</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
